--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
   <section id="title">
     <div class="container-fluid">
+
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="">tindog</a>
@@ -36,13 +37,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="">Contact</a>
+                    <a class="nav-link" href="#footer">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="">Pricing</a>
+                    <a class="nav-link" href="pricing">Pricing</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="">Download</a>
+                    <a class="nav-link" href="#cta">Download</a>
                 </li>
             </ul>
         </div>
@@ -136,9 +137,9 @@
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
-    <div class="row">
+    <div class="row"><!--Don't forget to add this class row so that the row adapt depending on the size screens-->
 
-      <div class="pricing-column col-lg-4 col-md-6">
+      <div class="pricing-column col-lg-4 col-md-6"> <!--lg is for large screens-->
         <div class="card">
           <div class="card-header">
             <h3>Chihuahua</h3>
@@ -191,14 +192,13 @@
 
 
 
-
   <!-- Call to Action -->
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="btn btn-dark btn-lg download-button"> <i class="fab fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
 
   </section>
 
@@ -207,7 +207,13 @@
 
   <footer id="footer">
 
+    <i class="social-icon fab fa-twitter"></i> 
+    <i class="social-icon fab fab fa-facebook-f"></i>
+    <i class="social-icon fab fab fa-instagram"></i>
+    <i class="social-icon fab far fa-envelope"></i>
+
     <p>© Copyright TinDog</p>
+    
 
   </footer>
 
